<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.tmnt.queuer.activities.LoginActivity$PlaceholderFragment">

    <EditText
        android:id="@+id/et_username"
        android:inputType="text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/et_password"
        android:inputType="textPassword"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <CheckBox
        android:id="@+id/checkbox"
        android:text="@string/remember_me"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

    <Button
        android:id="@+id/btn_createAccount"
        android:text="@string/create_account_button"
        android:layout_gravity="right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btn_login"
        android:text="@string/login_button"
        android:layout_toRightOf="@id/btn_createAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
       <!-- android:onClick="" -->

    </RelativeLayout>
    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/li_progressbar"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loading"
        android:id="@+id/li_loading"
        android:layout_gravity="center_horizontal" />

</LinearLayout>